--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "src/assets/js/scripts.js"
+              "src/assets/js/scripts.js",
+              "node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
